5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1863_1293.log
== TEST (2019-07-02 11:03:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = (zeros(3,3),dtype=int)
print(mat)
-- ERROR:
File "XXXX", line 5
    mat = (zeros(3,3),dtype=int)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:04:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = zeros((3,3),dtype=int)
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:07:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0]
				 [2,7,8]
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:07:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:07:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
print(round(b, 0)
-- ERROR:
File "XXXX", line 11
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:08:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
c = round(b, 0)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:09:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
c = round(b, 1)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:09:22) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = round(dot(inv(mat), a),1)

print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:10:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a

print(b)
print("plateia:"b[0,1])
-- ERROR:
File "XXXX", line 11
    print(b)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:10:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)


print("plateia:"b[0,1])
-- ERROR:
File "XXXX", line 12
    print("plateia:"b[0,1])
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:10:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)


print("plateia:"+b[0,1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:11:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)


print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:11:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
plat = b[0,1]

print(plat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:11:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
plat = b[0,0]

print(plat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:12:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
plat = 

print(b)
-- ERROR:
File "XXXX", line 10
    plat = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:12:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)

print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:12:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
b1 = b.T
print(b1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:20:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)

print(b[1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:21:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)

print("plateia"+b[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:21:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
b[0] = A
print("plateia"+A)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:22:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
b[0] = s
print("plateia"+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:22:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
s = b[0]
print("plateia"+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:22:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
s = b[0]
print("plateia":), print(s)
-- ERROR:
File "XXXX", line 11
    print("plateia":), print(s)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:22:50) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
s = b[0]
print("plateia":)print(s)
-- ERROR:
File "XXXX", line 11
    print("plateia":)print(s)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:23:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
s = b[0]
print("plateia:"+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:24:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
s = b[0]
print("plateia:",s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:24:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
s = b[0]
print("plateia:",s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:24:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
s = b[0]
print("plateia:",round(s,0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:26:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
s = b[0]
t = b[1]
v = b[2]
print("plateia:",round(s,0))
print("camarotes inferiores:", round(t,0))
print("camarotes superiores:", round(v,0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:28:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
s = b[0]
t = b[1]
v = b[2]
print("plateia:",round(s,0))
print("camarotes inferiores:", round(t,0))
print("camarotes superiores:", round(v,0))
if b[0]>b[1] and b[0] > b[2]:
	print("plateia")
elif b[1]>b[0] and b[1] > b[2]:
	print("camarotes inferiores")
elif b[2]>b[1] and b[2] > b[0]:
	print("camarotes superiores")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:28:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
xyz = array(eval(input("Ingressos")))

mat = array([[4,6,0],
				 [2,7,8],
				 [0,3,12]])
a = xyz.T
b = dot(inv(mat), a)
s = b[0]
t = b[1]
v = b[2]
print("plateia:",round(s,0))
print("camarotes inferiores:", round(t,0))
print("camarotes superiores:", round(v,0))
if b[0]>b[1] and b[0] > b[2]:
	print("plateia")
elif b[1]>b[0] and b[1] > b[2]:
	print("camarotes inferiores")
elif b[2]>b[1] and b[2] > b[0]:
	print("camarotes superiores")
-- EXECUTION TIME:
1.27284
-- TEST CASE 1:
---- input:
[27740,26598,15468]
---- correct output:
plateia: 5123.0
camarotes inferiores: 1208.0
camarotes superiores: 987.0
plateia
---- user output:
plateia: 5123.0
camarotes inferiores: 1208.0
camarotes superiores: 987.0
plateia
-- TEST CASE 2:
---- input:
[47612,78142,60342]
---- correct output:
plateia: 1322.0
camarotes inferiores: 7054.0
camarotes superiores: 3265.0
camarotes inferiores
---- user output:
plateia: 1322.0
camarotes inferiores: 7054.0
camarotes superiores: 3265.0
camarotes inferiores
-- TEST CASE 3:
---- input:
[2164,9042,10890]
---- correct output:
plateia: 16.0
camarotes inferiores: 350.0
camarotes superiores: 820.0
camarotes superiores

---- user output:
plateia: 16.0
camarotes inferiores: 350.0
camarotes superiores: 820.0
camarotes superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
